Revision history for PCRD

{{$NEXT}}

1.002 - 2025-06-15
	- Use true/false values in protocol instead of 1/0
	- All features now use true/false values on read where applicable
	- All features now refuse to do anything on write when false is passed
	- Features no longer return -1 if the result is not available, they fail instead
	- Features now do better job at validating their input
	- Added exceptions
	- Script pcrctl interface has been slightly modified
	- pcrctl can now guess the module if the feature name is unique
	- pcrctl can now show a complete list of enabled features
	- pcrctl now uses --config instead of config
	- Protocol failed status value changed from 'err' to 'nok'
	- Minor tweaks to feature preparation / checking / initialization procedure

1.001 - 2025-06-11
	- Fix display brightness becoming stuck on low values
	- Fix unicode handling in network communication
	- Fix rare cases of division by zero error
	- Move suspend feature to Device module
	- Add reboot and poweroff features to Device module
	- Add mute_microphone feature to Sound module
	- Improve xrandr feature

1.000 - 2025-06-08
	- PCRD is now meant to be run as root
	- PCRD now requires an "user agent" which executes some commands on behalf of the user
	- Project is now based on Mite
	- Allow multiple hooks
	- Add mute feature to Sound module
	- Add suspend feature to Power module
	- Add ac feature to Power module
	- Add xrandr feature to Display module
	- Add new Device module
	- Better dependencies handling
	- Improved documentation

0.003 - 2025-05-19
	- Execute hook now gets passed the return value of the function
	- PCRD server now creates a lockfile on the socket file

0.002 - 2025-05-17
	- Fix calculation of cpu usage
	- Add configurable time window of readings taken for battery life calculation
	- Protect against system clock changing to the future causing the program to go into a loop
	- Add minimal hook system, allow hooking to execution of module features