@@ -190,8 +190,8 @@ sub prepare_modules
 	}
 
 	# after all features are checked, check their dependencies
-	# TODO: this # should be done after all futures from the previous foreach are complete
-	if (!$args{agent_present}) {
+	# TODO: this should be done after all futures from the previous foreach are complete
+	if (!defined $args{agent_present}) {
 		foreach my $module (@order) {
 			$modules->{$module}->check(%args, dependencies => 1);
 		}
